Actions
Bug #10689
closedsrpt_cm_conn_closed_hdlr() needs a smatch fix
Start date:
2019-04-03
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage smatch
Gerrit CR:
External Bug:
Description
It needlessly checks 'ch' for NULL after we asserted it wasn't.
Updated by John Levon over 4 years ago
- Tags changed from needs-triage to needs-triage smatch
Updated by Electric Monk over 4 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 571d0d198e0c9799d6076f93f201f482993955ed
commit 571d0d198e0c9799d6076f93f201f482993955ed Author: John Levon <john.levon@joyent.com> Date: 2019-04-13T23:19:52.000Z 10689 srpt_cm_conn_closed_hdlr() needs a smatch fix Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions