10689 srpt_cm_conn_closed_hdlr() needs a smatch fix Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>